add an option -upgrade-module-path to the compiler and use it when building the external plugins